# TVC

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: ci.yml
analysis/: TVC_benchmarking.ipynb  metadata.csv
src/: main.rs
test_assets/: chr11.fasta
test_assets/testing_bams/: .gitattributes  both_strands_chr11_8198900_A_C_homo.bam  both_strands_chr11_8198900_A_C_homo.bam.bai  both_strands_chr11_8198951_T_A_het.bam  both_strands_chr11_8198951_T_A_het.bam.bai  chr11:1160400-1160500_indel2_sorted.bam  chr11:1160400-1160500_indel2_sorted.bam.bai  chr11:1160400-1160500_short_hetero_del.bam.bai  chr11:1912250-chr11:1912350_short_del_het.bam  chr11:1912250-chr11:1912350_short_del_het.bam.bai  chr11:2097050-2097150_long_ins_het.bam  chr11:2097050-2097150_long_ins_het.bam.bai  chr11:228150-228350_long_ins_hetero.bam  chr11:228150-228350_long_ins_hetero.bam.bai  chr11:5888900-5889100_long_ins_homo.bam  chr11:5888900-5889100_long_ins_homo.bam.bai  chr11:6586900-6587100_short_ins_homo.bam  chr11:6586900-6587100_short_ins_homo.bam.bai  chr11:871770-871880_long_ins_homo.bam  chr11:871770-871880_long_ins_homo.bam.bai  chr11:871770-871880_long_ins_homo_sorted.bam.bai  denovo_ob_chr11_134755809_T_C_homo.bam  denovo_ob_chr11_134755809_T_C_homo.bam.bai  denovo_ob_chr11_134911365_T_C_het.bam  denovo_ob_chr11_134911365_T_C_het.bam.bai  denovo_ot_chr11_134479860_A_G_homo.bam  denovo_ot_chr11_134479860_A_G_homo.bam.bai  denovo_ot_chr11_134749303_A_G_het.bam  denovo_ot_chr11_134749303_A_G_het.bam.bai  methylation_site_chr11_134755601_134755621.bam  (+11 more)
