[package]
name = "tvc"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
litemap = "=0.7.4"
zerofrom = "=0.1.5"
rust-htslib = "0.49"
bio = "1.4"
statrs = "0.16"
rayon = "1.7"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }